tests/fixtures/compile-errors/register-invalid-parameter/compile_error.nim
import strformat,options

import ../../../../src/macro-assertions
ErrorBase.RegisterParam1NotStringLiteral